--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget4/mixed-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget4/mixed-widget4.component.html
@@ -220,7 +220,7 @@
                     <!-- Amt in word -->
                     <label for="example-text-input" class="col-md-2 col-form-label">Amt In Word</label>
                     <div class="col-sm-10">
-                      <label for="example-text-input" class="col-md-8 col-form-label"> {{ amountInWord }} </label>
+                      <label for="example-text-input" class="col-md-8 col-form-label"> {{ amountInWords }} </label>
 
                     </div>
                   </div>
