--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget8/mixed-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget8/mixed-widget8.component.html
@@ -312,7 +312,7 @@
                           <i class="fas fa-rupee-sign"></i>
                           {{totalPurchaseAmt | number:'1.0-0'}}
                         </span></p>
-                      <!-- <p class=""> <i class="fas fa-rupee-sign"></i> {{amountInWord}}</p> -->
+                      <p class=""> <i class="fas fa-rupee-sign"></i> {{amountInWords}}</p>
                     </div>
                   </span>
                   <p><b>Note : interest will be charged if bill not paid within 7 days</b></p>
@@ -631,7 +631,7 @@
               </span>
             </span>
             <br>
-            <!-- {{amountInWord}} -->
+            {{amountInWords}}
           </div>
           <div class="col-md-4">
 
