--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -120,7 +120,7 @@
           </span>
         </div>
         <div *ngIf="isBookLedger" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/crafted/pages/profile" data-kt-menu-trigger="click">
+          routerLink="/credit/bookLedger" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
