--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
@@ -327,7 +327,7 @@
                     <i class="fas fa-rupee-sign"></i>
                     {{netOS | number:'1.0-0'}}
                   </span></h5>
-                <!-- <h5 class=""> <i class="fas fa-rupee-sign"></i> {{amountInWord}}</h5> -->
+                <h5 class=""> <i class="fas fa-rupee-sign"></i> {{amountInWords}}</h5>
               </div>
             </span>
 
@@ -730,7 +730,7 @@
               </span>
             </span>
             <br>
-            <!-- {{amountInWord}} -->
+            {{amountInWords}}
           </div>
 
           <div class="col-md-4">
