--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget7/mixed-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget7/mixed-widget7.component.html
@@ -366,7 +366,7 @@
                           <i class="fas fa-rupee-sign"></i>
                           {{netOS | number:'1.0-0'}}
                         </span></p>
-                      <!-- <p class=""> <i class="fas fa-rupee-sign"></i> {{amountInWord}}</p> -->
+                      <p class=""> <i class="fas fa-rupee-sign"></i> {{amountInWords}}</p>
                     </div>
                   </span>
                   <br>
@@ -725,7 +725,7 @@
               </span>
             </span>
             <br>
-            <!-- {{amountInWord}} -->
+            {{amountInWords}}
           </div>
           <div class="col-md-4">
             <span *ngFor="let data of bankAccList; let i = index">
