changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -130,7 +130,7 @@
           </span>
         </div>
         <div *ngIf="isSavedInv" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/crafted/pages/profile" data-kt-menu-trigger="click">
+          routerLink="/credit/savedInvoice" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -140,7 +140,7 @@
           </span>
         </div>
         <div *ngIf="isAddLubeTax" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/crafted/pages/profile" data-kt-menu-trigger="click">
+          routerLink="/credit/AddLubeTaxGstSale" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
